make a converter to JSON and BIN

--- a/ML_Model/encoding/price_category_mapping.json
+++ b/ML_Model/encoding/price_category_mapping.json
@@ -2,11 +2,11 @@
     "0": "0-250 juta",
     "1": "250-500 juta",
     "2": "500-750 juta",
-    "3": "750 juta - 1 milyar",
+    "3": "750 juta - 1 miliar",
     "4": "1-1.25 miliar",
     "5": "1.25-1.5 miliar",
     "6": "1.5-1.75 miliar",
-    "7": "1.75-2 miliar",
+    "7": "1.75-2 miliar",   
     "8": "2-2.25 miliar",
     "9": "2.25-2.5 miliar",
     "10": "2.5-2.75 miliar",
